# syncer

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md
design/: 20180109SpaceCalculations.ods  DESIGN.md  test_fanout_waste.rs
src/: blobstorage.rs  blockstorage.rs  config.rs  filesystem.rs  lib.rs  main.rs  mytime.rs  rwhashes.rs  settings.rs
src/backingstore/: blobstorage.rs  metadatadb.rs  mod.rs  rsync.rs  transferer.rs
src/filesystem/: entry.rs  mod.rs  vclock.rs
