[package]
name = "syncer"
version = "0.1.0"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A filesystem that pretends you have all your files locally while caching only the most recently used"
repository = "https://github.com/pedrocr/syncer"
license = "GPL-3.0"
categories = ["filesystem"]

[dependencies]
time = "0.1.39"
fuse_mt = "0.4.3"
libc = "0.2"
users = "0.6.0"
blake2 = "0.7.0"
hex = "0.3.1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
bincode = "0.9.2"
rusqlite = "0.13.0"
crossbeam = "0.3.2"

[profile.dev]
opt-level = 3
