[package]
name = "syncer"
version = "0.5.1"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A filesystem that pretends you have all your files locally while caching only the most recently used"
repository = "https://github.com/pedrocr/syncer"
license = "GPL-3.0"
categories = ["filesystem"]
edition = "2018"

[dependencies]
time = "0.1.39"
fuse_mt = "0.4.4"
libc = "0.2"
users = "0.9"
blake2 = "0.7.0"
hex = "0.3.1"
serde = "1"
serde_derive = "1"
bincode = "1"
rusqlite = "0.14"
crossbeam-utils = "0.5"
toml = "0.5"
base64 = "0.11"
rand = "0.5"

[profile.dev]
opt-level = 3
